concord_macros/tests/trybuild/fail/codegen_contract/buffered_endpoint_execute_multipart.stderr
error[E0599]: the method `execute_multipart` exists for struct `PendingRequest<'_, BufferedEndpointExecuteMultipartApiCx, EpUserHa48f81f001b893d2, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen_contract/buffered_endpoint_execute_multipart.rs:16:24
   |
 5 | / api! {
 6 | |     client BufferedEndpointExecuteMultipartApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET User
   | |____________- doesn't satisfy `<_ as Endpoint<BufferedEndpointExecuteMultipartApiCx>>::Response = MultipartStream<_>`
...
16 |       let _ = api.user().execute_multipart().await.unwrap();
   |                          ^^^^^^^^^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `<EpUserHa48f81f001b893d2 as concord_core::prelude::Endpoint<BufferedEndpointExecuteMultipartApiCx>>::Response = MultipartStream<_>`
